fix(dropdowns): missing border when inversed in .btn-group

--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -25,7 +25,7 @@
     }
   }
 
-  .btn-group & {
+  .btn-group &:not(.btn-inverse) {
     border-color: $dropdown-color;
   }
   // end mod
